[project]
name = "jorgeabreu"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Alberto Silva Abreu",email = "abreutrix.jorge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.7,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
